// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiToolTip display prop renders block 1`] = `
<span
  class="ouiToolTipAnchor ouiToolTipAnchor--displayBlock"
>
  <button>
    Trigger
  </button>
</span>
`;

exports[`OuiToolTip is rendered 1`] = `
<span
  class="ouiToolTipAnchor"
>
  <button>
    Trigger
  </button>
</span>
`;

exports[`OuiToolTip shows tooltip on focus 1`] = `
<span
  class="ouiToolTipAnchor"
>
  <button
    aria-describedby="id"
    data-test-subj="trigger"
  >
    Trigger
  </button>
</span>
`;
